--- a/BIT607-AS2-SkyReekie-WebApplication/CSS/stylesheet.css
+++ b/BIT607-AS2-SkyReekie-WebApplication/CSS/stylesheet.css
@@ -59,6 +59,13 @@ nav a {
     line-height: 150px;
 }
 
+.mobile-menu-icon {
+    display: none;
+    font-size: 30px;
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+}
+
 /* Centered content styling */
 .centered-content {
     text-align: center;
@@ -362,7 +369,7 @@ iframe, .image-content img {
     }
 
     header {
-        height: auto;
+        height: 80px;
         padding: 10px;
     }
 
@@ -372,19 +379,37 @@ iframe, .image-content img {
     }
 
     .logo {
-        float: none;
-        text-align: center;
+        text-align: left;
+    }
+
+    .logo img {
+        width: 80px;
+        height: auto;
     }
 
     nav {
-        float: none;
-        text-align: center;
+        display: none;
+        position: absolute;
+        top: 150px;
+        right: 0;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+        min-height: 100px;
     }
 
     nav a {
         display: block;
-        margin: 5px 0;
-        font-size: 16px;
+        text-align: center;
+        margin: 10px 0;
+        padding: 10px 0;
+        font-size: 18px;
+        line-height: normal;
+    }
+
+    .mobile-menu-icon {
+        display: block;
+        text-align: right;
+        margin-right: 10px;
     }
 
     .video {
